variables.Variables.scala.error
Erreur de compilation :
Variables:6: error: not found: value prendsBiscuit
prendsBiscuit();
^