variables.Variables.scala.code
var a = 0;
while (!estSurBiscuit() ) {
  avance();
  a=a+1;
};
prendsBiscuit();
while (a!=0) {
  recule();
  a=a-1
}